# value-at-risk-with-garch-models

./: .gitignore  LICENSE  README.md  pyproject.toml  var-garch.html  var-garch.ipynb
data/: aapl.csv  cnyusd.csv  crude.csv  ethusd.csv  sp500.csv  usdcny.csv
