[project]
name = "var-garch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arch>=8.0.0",
    "certifi>=2026.5.20",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-datareader>=0.10.0",
    "requests>=2.34.2",
    "rpy2>=3.6.7",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "yfinance>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
